Add runConcurrentlyConfiguredRandomTasks